<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:fillViewport="true"
    android:layout_height="match_parent"
    tools:context=".ui.request.RequestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/request_form"
            android:textColor="@color/colorText"
            android:layout_marginTop="20dp"
            android:textSize="22sp"
            android:textStyle="normal"
            android:layout_marginStart="30dp"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText">

            <EditText
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:background="#0000"
                android:drawablePadding="12dp"
                android:gravity="start"

                android:inputType="text"
                android:hint="@string/name"
                android:padding="16dp"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:textSize="13sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@android:color/darker_gray"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText">

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginStart="1dp"
                android:background="#0000"
                android:drawablePadding="12dp"
                android:gravity="start"

                android:inputType="text"
                android:hint="@string/email"
                android:padding="16dp"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:textSize="13sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@android:color/darker_gray"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText">

            <EditText
                android:id="@+id/edPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginStart="1dp"
                android:background="#0000"
                android:drawablePadding="12dp"
                android:gravity="start"

                android:inputType="text"
                android:hint="@string/phone"
                android:padding="16dp"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:textSize="13sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@android:color/darker_gray"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvAddress1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText">

            <EditText
                android:id="@+id/edAddress1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:background="#0000"
                android:drawablePadding="12dp"
                android:gravity="start"
                android:inputType="text"
                android:hint="@string/address_1"
                android:padding="16dp"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:textSize="13sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@android:color/darker_gray"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvAddress2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText">

            <EditText
                android:id="@+id/edAddress2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginStart="1dp"
                android:background="#0000"
                android:drawablePadding="12dp"
                android:gravity="start"

                android:inputType="text"
                android:hint="@string/address_2_optional"
                android:padding="16dp"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:textSize="13sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@android:color/darker_gray"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvZipCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText">

            <EditText
                android:id="@+id/edZipCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginStart="1dp"
                android:background="#0000"
                android:drawablePadding="12dp"
                android:gravity="start"

                android:inputType="text"
                android:hint="@string/zip_code"
                android:padding="16dp"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:textSize="13sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@android:color/darker_gray"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvSocialSecurity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText">

            <EditText
                android:id="@+id/edSocialSecurity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginStart="1dp"
                android:background="#0000"
                android:drawablePadding="12dp"
                android:gravity="start"

                android:inputType="text"
                android:hint="@string/social_security"
                android:padding="16dp"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:textSize="13sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@android:color/darker_gray"
            />

        <Button
            android:layout_width="match_parent"
            android:id="@+id/btnRequest"
            android:text="@string/request"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@color/colorBtn"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="50dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>